Fix mobile menu and spacing issues

--- a/source/stylesheets/_cusd-settings.scss
+++ b/source/stylesheets/_cusd-settings.scss
@@ -470,8 +470,8 @@ $button-med: rem-calc(10);
 
 // We use these to control button text styles.
 // $button-font-family: $body-font-family;
-// $button-font-color: $white;
-// $button-font-color-alt: $oil;
+$button-font-color: $body-background;
+$button-font-color-alt: $primary-color;
 // $button-font-tny: rem-calc(11);
 // $button-font-sml: rem-calc(13);
 $button-font-med: rem-calc(14);
